<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_conta"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/voltarButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:contentDescription="@string/botao_de_voltarCadastro"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_logo"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="65dp"
            android:text="@string/criar_conta"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />


        <TextView
            android:id="@+id/tv_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="11dp"
            android:text="@string/bem_vindo_nfa_a_seu_cadastro_para_continuar"
            android:textColor="#666666"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

        <ImageView
            android:id="@+id/imageCadastro"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitulo"
            app:srcCompat="@drawable/cadastro" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:visibility="visible"
            app:boxBackgroundColor="@color/ice"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:circularflow_defaultRadius="20dp"
            app:circularflow_radiusInDP="20dp"
            app:layout_constraintCircleRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCadastro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomeCadastro"
                android:textColorHint="#616161"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sobrenome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            app:boxBackgroundColor="@color/ice"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:circularflow_defaultRadius="20dp"
            app:circularflow_radiusInDP="20dp"
            app:layout_constraintCircleRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sobrenome"
                android:textColorHint="#616161"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            app:boxBackgroundColor="@color/ice"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sobrenome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpfCadastro"
                android:textColorHint="#757575"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            app:boxBackgroundColor="@color/ice"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpf">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mailCadastro"
                android:textColorHint="#757575"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_senha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            app:boxBackgroundColor="@color/ice"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senhaCadastro"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_confirma_senha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="49dp"
            android:hint="@string/confirmar_senhaCadastro"
            app:boxBackgroundColor="@color/ice"
            android:textSize="16sp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintBottom_toTopOf="@+id/id_escolha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_senha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_confirmaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/id_escolha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="177dp"
            android:layout_weight="1"
            android:text="@string/escolha_seu_perfilCadastro"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/selecao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_confirma_senha" />

        <RadioGroup
            android:id="@+id/selecao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="37dp"

            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="673dp"
            app:layout_constraintTop_toBottomOf="@+id/id_escolha">

            <RadioButton
                android:id="@+id/radioPaciente"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:text="@string/pacienteCadastro" />

            <RadioButton
                android:id="@+id/radioMedico"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:text="@string/m_dicoCadastro" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputExclusivoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="36dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="36dp"
            android:visibility="invisible"
            app:boxBackgroundColor="@color/ice"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selecao">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputExclusivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="36dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:text="@string/cadastrarCadastro"
            android:textStyle="bold"
            android:visibility="invisible"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selecao"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>