<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CriarPostFragment">

        <Button
            android:id="@+id/botaoPublicar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="40dp"
            android:alpha="0.8"
            android:text="@string/button"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caixaAnexo" />

        <ImageView
            android:id="@+id/imagemAnexo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/clips_anexo"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@+id/caixaAnexo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postCaixa"
            app:srcCompat="@drawable/clip"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/botaoVoltarFeed"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dm_toolbar"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <Spinner
            android:id="@+id/selecTemas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:background="@color/ice_30"
            android:minHeight="48dp"
            app:layout_constraintCircleRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/temaIndic"
            app:layout_constraintTop_toBottomOf="@+id/tituloCriarPostagem" />

        <TextView
            android:id="@+id/temaIndic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="52dp"
            android:text="@string/informe_o_tema"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloCriarPostagem" />

        <TextView
            android:id="@+id/tituloPostagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="50dp"
            android:text="@string/ti_tulo_da_postagem"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temaIndic" />

        <TextView
            android:id="@+id/postagemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:text="@string/digite_aqui_sua_postagem"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloCaixa" />

        <TextView
            android:id="@+id/tituloCriarPostagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Criar postagem"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dm_toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tituloCaixa"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"

            app:boxBackgroundColor="@color/ice_30"
            app:boxStrokeWidth="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloPostagem">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tituloText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postCaixa"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postagemText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/ice_30"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/caixaAnexo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            app:boxBackgroundColor="@color/ice_30"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagemAnexo"
            app:layout_constraintTop_toBottomOf="@+id/postCaixa">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textAnexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ice_30"
                android:hint="@string/anexo_link_imgur"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/dm_toolbar"
            layout="@layout/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>